2008-04-19  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-thread-indicator): New variable.
	(gdb-init-1): Initialise it.
	(gdb-annotation-rules): New entry for "new-thread".
	(gdb-thread-identification): New function to customize
	mode-line-buffer-identification.
	(gdb-frames-mode, gdb-registers-mode, gdb-locals-mode)
	(gdb-assembler-mode): Use it.
	(gdb-threads-mode): Force "info threads" onto queue.

2008-04-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (locate-file-completion-table): Rename from
	locate-file-completion and make it use `pred' in the normal way.
	(locate-file-completion): New compatibility wrapper.
	(load-library): Use locate-file-completion-table.
	* finder.el (finder-commentary):
	* subr.el (locate-library):
	* emacs-lisp/find-func.el (find-library): Likewise.
	* info.el: Use with-current-buffer and inhibit-read-only.
	(Info-read-node-name-2): Change to use `predicate' in the normal way.
	(Info-read-node-name-1): Adjust uses accordingly.

	* minibuffer.el (completion-table-with-context): Add support for `pred'.
	(completion-table-with-terminator): Don't use complete-with-action
	since we have to distinguish all three cases anyway.
	(completion-table-with-predicate): New function.
	(dynamic-completion-table): Add obsolete alias.

	* emacs-lisp/trace.el (trace-make-advice): Don't change selected-window.

2008-04-18  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-dir-menu-map, vc-dir-mode-map, vc-dir-tool-bar-map):
	Use quit-window instead of bury-buffer.

2008-04-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-with-terminator): Fix last fix.

2008-04-18  Andreas Schwab  <schwab@suse.de>

	* Makefile.in ($(MH_E_DIR)/mh-loaddefs.el, $(CAL_DIR)/cal-loaddefs.el)
	($(CAL_DIR)/diary-loaddefs.el, $(CAL_DIR)/hol-loaddefs.el):
	Depend on $(lisp)/subdirs.el.

2008-04-18  Juanma Barranquero  <lekktu@gmail.com>

	* descr-text.el (describe-char-after):
	Use `define-obsolete-function-alias'.
